--- a/scenarios/data.meteo.unican.es/templates/setenv.sh.j2
+++ b/scenarios/data.meteo.unican.es/templates/setenv.sh.j2
@@ -1,6 +1,7 @@
 export CATALINA_HOME={{ tomcat_home }}
 export CATALINA_BASE={{ tomcat_bases }}/{{ item.name }}
 export JRE_HOME={{ jdk_home }}
+export CONTENT_ROOT="-Dtds.content.root.path={{ tomcat_bases }}/{{ item.name }}/content"
 
 export NORMAL="-d64 -Xmx{{ tomcat_Xmx | default("2048m") }} -Xms{{ tomcat_Xms | default("512m") }} -server -ea -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true"
 export JAVA_PREFS_ROOTS="-Djava.util.prefs.systemRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs -Djava.util.prefs.userRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs"
