Disabled SSLv2.0 for spock

--- a/scenarios/data.meteo.unican.es/templates/httpd.ssl.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/httpd.ssl.conf.j2
@@ -4,4 +4,5 @@ Listen 443
 SSLEngine on
 SSLCertificateFile {{ hostcert }}
 SSLCertificateKeyFile {{ hostkey }}
+SSLProtocol all -SSLv2 -SSLv3
 </VirtualHost>
