--- a/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
@@ -4,6 +4,8 @@ LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
 LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
 
+ProxyTimeout 600
+
 <Location /status-proxy>
     SetHandler balancer-manager
     Allow from all
