Updated ssl configuration in spock

--- a/scenarios/data.meteo.unican.es/templates/httpd.ssl.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/httpd.ssl.conf.j2
@@ -5,4 +5,6 @@ SSLEngine on
 SSLCertificateFile {{ hostcert }}
 SSLCertificateKeyFile {{ hostkey }}
 SSLProtocol all -SSLv2 -SSLv3
+SSLCipherSuite HIGH:!ADH:-kEDH:!kRSA:!MD5:-SHA1:!DSS:ECDHE-RSA-AES128-SHA
+SSLHonorCipherOrder on
 </VirtualHost>
