Allow access to proxy status from internal network

--- a/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
@@ -5,6 +5,7 @@ ProxyTimeout 600
     Order Deny,Allow
     Deny from all
     Allow from 193.144.202.00/24
+    Allow from 192.168.202.00/24
 </Location>
 
 ProxyPass /status-proxy !
