--- a/roles/devel/templates/server.xml.j2
+++ b/roles/devel/templates/server.xml.j2
@@ -88,7 +88,7 @@
     -->
 
     <!-- Define an AJP 1.3 Connector on port 8009 -->
-    <Connector port="{{ ajp }}" protocol="AJP/1.3" redirectPort="8443" />
+    <Connector port="{{ ajp }}" protocol="AJP/1.3" redirectPort="8443" secretRequired="false" address="{{ ansible_all_ipv4_addresses[0] }}" />
 
 
     <!-- An Engine represents the entry point (within Catalina) that processes
