--- a/scenarios/data.meteo.unican.es/templates/tap.properties.j2
+++ b/scenarios/data.meteo.unican.es/templates/tap.properties.j2
@@ -4,6 +4,6 @@ recaptcha.publickey = {{ tap.publickey }}
   
 tap.baseurl = https://{{ ansible_hostname }}/udg-tap
 tap.managers.email = {{ tap.emails }}
-tap.noreply = {{ tap.noreply }}
+tap.email.noreply = {{ tap.noreply }}
 
 tds.baseurl = https://{{ ansible_hostname }}/tds5/catalog/
