--- a/scenarios/data.meteo.unican.es/templates/tap.properties.j2
+++ b/scenarios/data.meteo.unican.es/templates/tap.properties.j2
@@ -2,8 +2,8 @@ recaptcha.verificationurl = {{ tap.verificationurl }}
 recaptcha.privatekey = {{ tap.privatekey }}
 recaptcha.publickey = {{ tap.publickey }}
   
-tap.baseurl = https://{{ ansible_hostname }}/udg-tap
+tap.baseurl = https://data.meteo.unican.es/udg-tap
 tap.managers.email = {{ tap.emails }}
 tap.email.noreply = {{ tap.noreply }}
 
-tds.baseurl = https://{{ ansible_hostname }}/tds5/catalog/
+tds.baseurl = https://data.meteo.unican.es/tds5
