--- a/roles/devel/templates/setenv.sh.j2
+++ b/roles/devel/templates/setenv.sh.j2
@@ -3,7 +3,7 @@ export CATALINA_BASE={{ tomcat.home }}
 export JRE_HOME={{ tomcat.jdk }}
 export CONTENT_ROOT="-Dtds.content.root.path={{ tomcat.home }}/content"
 
-export NORMAL="-d64 -Xmx2048m -Xms512m -server -ea -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true"
+export NORMAL="-d64 -Xmx2048m -Xms512m -server -ea -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true  -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m -XX:-UseGCOverheadLimit"
 export JAVA_PREFS_ROOTS="-Djava.util.prefs.systemRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs -Djava.util.prefs.userRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs"
 
 export CATALINA_OPTS="$NORMAL $CONTENT_ROOT $JAVA_PREFS_ROOTS"
