--- a/scenarios/data.meteo.unican.es/devels/templates/tds5-data.server.xml.j2
+++ b/scenarios/data.meteo.unican.es/devels/templates/tds5-data.server.xml.j2
@@ -19,7 +19,7 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="{{ devels.tds5_data.shutdown }}" shutdown="SHUTDOWN">
+<Server port="{{ tomcats.tds5_data.shutdown }}" shutdown="SHUTDOWN">
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
   <!-- Security listener. Documentation at /docs/config/listeners.html
   <Listener className="org.apache.catalina.security.SecurityListener" />
@@ -67,7 +67,7 @@
          APR (HTTP/AJP) Connector: /docs/apr.html
          Define a non-SSL/TLS HTTP/1.1 Connector on port 8080
     -->
-    <Connector port="{{ devels.tds5_data.http }}" protocol="HTTP/1.1"
+    <Connector port="{{ tomcats.tds5_data.http }}" protocol="HTTP/1.1"
                connectionTimeout="20000"
                redirectPort="8443" />
     <!-- A "Connector" using the shared thread pool-->
@@ -89,7 +89,7 @@
     -->
 
     <!-- Define an AJP 1.3 Connector on port 8009 -->
-    <Connector port="{{ devels.tds5_data.ajp }}" protocol="AJP/1.3" redirectPort="8443" secretRequired="false" address="{{ ansible_all_ipv4_addresses[0] }}" />
+    <Connector port="{{ tomcats.tds5_data.ajp }}" protocol="AJP/1.3" redirectPort="8443" secretRequired="false" address="{{ ansible_all_ipv4_addresses[0] }}" />
 
 
     <!-- An Engine represents the entry point (within Catalina) that processes
