--- a/roles/esgfbase/templates/base.properties.j2
+++ b/roles/esgfbase/templates/base.properties.j2
@@ -1,5 +1,5 @@
 [installer.properties]
-esgf.host={{ ansible_nodename }}
+esgf.host={{ esgf_host }}
 esgf.idp.peer=esgf-node.ipsl.upmc.fr
 esgf.index.peer=esgf-node.ipsl.upmc.fr
 
