fixed cache restart

--- a/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/modproxy.conf.j2
@@ -61,8 +61,13 @@ ProxyPassReverse /thredds/fileServer/esgcet balancer://esgf/thredds/fileServer/e
 <Proxy "balancer://udg">
 ProxySet stickysession=JSESSIONID
 </Proxy>
+# restricted access
 ProxyPass "/thredds/restrictedAccess" "balancer://udg/thredds/restrictedAccess"
 ProxyPassReverse "/thredds/restrictedAccess" "balancer://udg/thredds/restrictedAccess"
+
+# udg admin
+
+# main workers
 ProxyPass "/thredds" "balancer://udg/thredds"
 ProxyPassReverse "/thredds" "balancer://udg/thredds"
 ProxyPass "/udg-tap" "balancer://udg/udg-tap"
