--- a/roles/udg/templates/server.xml.j2
+++ b/roles/udg/templates/server.xml.j2
@@ -2,8 +2,8 @@
 <Server port="{{ tomcat.shutdown }}" shutdown="{{ tomcat.home|basename }}">
   <GlobalNamingResources>
     <Resource name="{{ udg.derby.name }}" auth="Container" type="javax.sql.DataSource"
-              factory="org.apache.tomcat.dbcp.dbcp.BasicDataSourceFactory"
-              validationQuery="SELECT count(*) FROM users" maxActive="20" maxIdle="10"
+              factory="org.apache.tomcat.dbcp.dbcp2.BasicDataSourceFactory"
+              validationQuery="SELECT count(*) FROM users" maxTotal="20" maxIdle="10"
               username="{{ udg.derby.user }}" password="{{ udg.derby.password }}"
               driverClassName="org.apache.derby.jdbc.ClientDriver"
               url="{{ udg.derby.url }}" readOnly="false"/>
@@ -16,10 +16,9 @@
   <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
 
   <Service name="Catalina">
-    <Connector port="{{ tomcat.http }}" protocol="HTTP/1.1" connectionTimeout="20000"
-               redirectPort="{{ tomcat.ssl }}"/>
+    <Connector port="{{ tomcat.http }}" protocol="HTTP/1.1" connectionTimeout="20000" redirectPort="{{ tomcat.ssl }}"/>
     <Connector port="{{ tomcat.ajp }}" protocol="AJP/1.3" secretRequired="false" address="{{ udg.ajp.address }}"/>
-    <Connector port="{{ tomcat.ssl }}" protocol="org.apache.coyote.http11.Http11Protocol"
+    <Connector port="{{ tomcat.ssl }}" protocol="org.apache.coyote.http11.Http11NioProtocol"
                maxThreads="200" scheme="https"
                secure="True" SSLEnabled="True"
                keystoreFile="{{ tomcat.home }}/server.p12" keystorePass="coches1"
@@ -27,11 +26,12 @@
 
     <Engine name="Catalina" defaultHost="localhost" jvmRoute="{{ ansible_hostname }}">
       <Host name="localhost"  appBase="webapps" unpackWARs="true" autoDeploy="true">
-        <Realm className="org.apache.catalina.realm.DataSourceRealm" digest="MD5"
-               debug="0" dataSourceName="{{ udg.derby.name }}" userTable="USERS"
+        <Realm className="org.apache.catalina.realm.DataSourceRealm"
+               dataSourceName="{{ udg.derby.name }}" userTable="USERS"
                userNameCol="USERNAME" userCredCol="PASSWORD" userRoleTable="V_USERS_ROLES"
-               roleNameCol="ROLENAME"/>
-
+               roleNameCol="ROLENAME">
+          <CredentialHandler className="org.apache.catalina.realm.MessageDigestCredentialHandler" algorithm="MD5" />
+        </Realm>
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                    prefix="localhost_access_log" suffix=".txt" pattern="%h %l %u %t &quot;%r&quot; %s %b" />
         <Cluster className="org.apache.catalina.ha.tcp.SimpleTcpCluster"/>
