--- a/scenarios/data.meteo.unican.es/templates/httpd24.conf.j2
+++ b/scenarios/data.meteo.unican.es/templates/httpd24.conf.j2
@@ -1,6 +1,6 @@
 ServerName data.meteo.unican.es
 ServerTokens Prod
-ServerRoot "/opt/rh/httpd24/root/etc/httpd"
+ServerRoot "{{ httpd_root }}"
 PidFile run/httpd.pid
 Timeout 1200
 KeepAlive Off
@@ -51,7 +51,11 @@ LoadModule headers_module modules/mod_headers.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule mime_module modules/mod_mime.so
 LoadModule dav_module modules/mod_dav.so
+{% if inventory_file|basename == "vagrant" %}
+LoadModule systemd_module modules/mod_systemd.so
+{% else %}
 #LoadModule systemd_module modules/mod_systemd.so
+{% endif %}
 LoadModule status_module modules/mod_status.so
 LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule info_module modules/mod_info.so
@@ -84,7 +88,8 @@ LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 <IfModule mod_geoip.c>
   GeoIPEnable On
   GeoIPDBFile /usr/share/GeoIP/GeoIP.dat
-  LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" country_downloads
+  {% raw %}LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" country_downloads{% endraw %}
+
   SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
   CustomLog logs/country_downloads_log country_downloads env=data_log
 </IfModule>
@@ -184,18 +189,6 @@ TraceEnable Off
     Require all denied
 </Location>
 
-## BEGIN CMCC KPIs
-LoadModule geoip_module modules/mod_geoip.so
-LoadModule geoip_module       /opt/rh/httpd24/root/usr/lib64/httpd/modules/mod_geoip.so
-<IfModule mod_geoip.c>
-  GeoIPEnable On
-  GeoIPDBFile /usr/share/GeoIP/GeoIP.dat
-</IfModule>
-LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" country_downloads
-SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
-CustomLog logs/country_downloads_log country_downloads env=data_log
-## END CMCC KPIs
-#RedirectMatch "^/$" "/thredds"
 RedirectMatch ^/$ /thredds
 <VirtualHost *:80>
 
